Add barebones for prediction view

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,10 @@
       body {
         background: #222;
       }
+
+      * {
+        line-height: 1;
+      }
     </style>
   </head>
   <body>
